# xyz2pov

./: .FBCIndex  AUTHORS  Makefile  README
.AppleDouble/: .Parent  Makefile  bubble_core.ps  pov2anim  solid_core.ps  xyz2pov.c
AtomTypes/: AtomTypes  Makefile
ac-tools/: Make.conf.in  configure.in
scripts/: Makefile  cvs2cl.pl  renderAll  renderRange
src/: Makefile  atom_parser.c  atom_parser.h  frameCount.c  frameCount.h  pdb2pov.c  pov2anim.c  pov_writer.c  pov_writer.h  xyz2pov.c
